--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <h1>Michiel Verboven's Git Achievements</h1>
-Unlocked 30/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 385 points<br>
+Unlocked 30/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 393 points<br>
 <ul>
 <li><div class="title">Apprentice Archivist (Level 1)</div>  <div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
 <li><div class="title">Apprentice Archivist (Level 3)</div>  <div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
@@ -88,6 +88,7 @@ Unlocked 30/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 <li><div class="title">Historian (Level 6)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Homeowner</div>  <div class="info">Set global email address using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-config.html">git-config</a>.</div></li>
 <li><div class="title">Let there be light</div>  <div class="info">Commit without a parent.</div></li>
+<li><div class="title">Master Banker (Level 7)</div>  <div class="info">Join two or more development histories together with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-merge.html">git-merge</a>.</div></li>
 <li><div class="title">Master Gipsy (Level 7)</div>  <div class="info">Create, list, delete a tag signed with GPG using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-tag.html">git-tag</a></div></li>
 <li><div class="title">Master Historian (Level 7)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Master Historian (Level 8)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
@@ -112,27 +113,27 @@ Unlocked 30/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-  20465 rev-parse
-   9938 symbolic-ref
-   1498 --git-dir=/home/michiel/SNaP/snap-ramp/.git
-    667 st
-    644 lola
-    564 diff
-    487 checkout
-    287 log
+  21239 rev-parse
+  10337 symbolic-ref
+   1549 --git-dir=/home/michiel/SNaP/snap-ramp/.git
+    690 st
+    655 lola
+    581 diff
+    520 checkout
+    288 log
     282 diff-index
-    228 commit
-    225 difftool
-    225 add
-    224 br
+    240 commit
+    234 br
+    229 add
+    227 difftool
+    217 help
     215 --git-dir=.git
-    211 help
-    209 stash
-    174 tag
-    159 push
-    108 merge
-     88 lol
-     81 branch
+    212 stash
+    185 tag
+    163 push
+    123 merge
+     90 lol
+     84 branch
      62 achievements
      54 rebase
      48 config
