--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <h1>Michiel Verboven's Git Achievements</h1>
-Unlocked 30/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 393 points<br>
+Unlocked 30/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 402 points<br>
 <ul>
 <li><div class="title">Apprentice Archivist (Level 1)</div>  <div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
 <li><div class="title">Apprentice Archivist (Level 3)</div>  <div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
@@ -94,6 +94,7 @@ Unlocked 30/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 <li><div class="title">Master Historian (Level 8)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Master Socialite (Level 7)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Master Stone Mason (Level 7)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
+<li><div class="title">Master Stone Mason (Level 8)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Miller (Level 4)</div>  <div class="info">Add only part of a file to the stage 170 times with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a> -p.</div></li>
 <li><div class="title">Miller (Level 5)</div>  <div class="info">Add only part of a file to the stage 204 times with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a> -p.</div></li>
 <li><div class="title">Presenter (Level 4)</div>  <div class="info">Shows one or more objects (blobs, trees, tags and commits) with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-show.html">git-show</a></div></li>
@@ -113,32 +114,33 @@ Unlocked 30/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-  21239 rev-parse
-  10337 symbolic-ref
-   1549 --git-dir=/home/michiel/SNaP/snap-ramp/.git
-    690 st
-    655 lola
-    581 diff
-    520 checkout
+  21680 rev-parse
+  10529 symbolic-ref
+   1605 --git-dir=/home/michiel/SNaP/snap-ramp/.git
+    718 st
+    657 lola
+    583 diff
+    545 checkout
     288 log
     282 diff-index
-    240 commit
-    234 br
-    229 add
-    227 difftool
-    217 help
+    242 commit
+    240 br
+    231 add
+    228 difftool
+    218 help
+    217 stash
     215 --git-dir=.git
-    212 stash
-    185 tag
-    163 push
+    186 tag
+    167 push
     123 merge
      90 lol
      84 branch
+     68 describe
      62 achievements
      54 rebase
      48 config
      43 ign
-     40 show
+     41 show
      23 ls-remote
      20 remote
      18 fetch
@@ -150,7 +152,6 @@ Git commands sorted by usage:
      11 format-patch
      11 blame
       9 reflog
-      9 describe
       7 reset
       7 fsck
       6 status
