--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <h1>Michiel Verboven's Git Achievements</h1>
-Unlocked 36/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 478 points<br>
+Unlocked 36/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 485 points<br>
 <ul>
 <li><div class="title">Apprentice Archivist (Level 1)</div>  <div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
 <li><div class="title">Apprentice Archivist (Level 3)</div>  <div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
@@ -113,6 +113,7 @@ Unlocked 36/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 <li><div class="title">Miller (Level 6)</div>  <div class="info">Add only part of a file to the stage 270 times with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a> -p.</div></li>
 <li><div class="title">Presenter (Level 4)</div>  <div class="info">Shows one or more objects (blobs, trees, tags and commits) with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-show.html">git-show</a></div></li>
 <li><div class="title">Presenter (Level 5)</div>  <div class="info">Shows one or more objects (blobs, trees, tags and commits) with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-show.html">git-show</a></div></li>
+<li><div class="title">Presenter (Level 6)</div>  <div class="info">Shows one or more objects (blobs, trees, tags and commits) with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-show.html">git-show</a></div></li>
 <li><div class="title">Product Manager (Level 4)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
 <li><div class="title">Product Manager (Level 5)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
 <li><div class="title">Seamstress (Level 4)</div>  <div class="info">amended a commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a> --amend.</div></li>
@@ -129,8 +130,8 @@ Unlocked 36/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-  35228 rev-parse
-  17280 symbolic-ref
+  35246 rev-parse
+  17289 symbolic-ref
    2017 --git-dir=/home/michiel/SNaP/snap-ramp/.git
    1110 lola
    1051 st
@@ -139,14 +140,14 @@ Git commands sorted by usage:
     435 commit
     420 --git-dir=.git
     377 add
-    360 tag
+    362 tag
     350 difftool
     331 help
     315 br
     303 log
     282 diff-index
     237 stash
-    214 push
+    215 push
     150 merge
     105 describe
      94 rebase
@@ -154,7 +155,7 @@ Git commands sorted by usage:
      90 lol
      71 config
      62 achievements
-     54 show
+     56 show
      43 ign
      27 remote
      27 gc
