--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <h1>Michiel Verboven's Git Achievements</h1>
-Unlocked 36/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 500 points<br>
+Unlocked 36/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 506 points<br>
 <ul>
 <li><div class="title">Apprentice Archivist (Level 1)</div>  <div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
 <li><div class="title">Apprentice Archivist (Level 3)</div>  <div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
@@ -84,6 +84,7 @@ Unlocked 36/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 <li><div class="title">Caretaker</div>  <div class="info">Added a .gitignore file to a repository.</div></li>
 <li><div class="title">Cherry Picker</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-cherry-pick.html">git-cherry-pick</a> to add a sha from another branch into the current branch.</div></li>
 <li><div class="title">Chimney Sweeper (Level 4)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-gc.html">git-gc</a> to run a number of housekeeping tasks on the current repository.</div></li>
+<li><div class="title">Chimney Sweeper (Level 5)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-gc.html">git-gc</a> to run a number of housekeeping tasks on the current repository.</div></li>
 <li><div class="title">Collector (Level 4)</div>  <div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
 <li><div class="title">Delivery Boy (Level 4)</div>  <div class="info">Move objects and refs by archive with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-bundle.html">git-bundle</a>.</div></li>
 <li><div class="title">Garage Inventor</div>  <div class="info">Used a custom alias for a Git command</div></li>
@@ -132,41 +133,41 @@ Unlocked 36/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-  36425 rev-parse
-  17847 symbolic-ref
-   2065 --git-dir=/home/michiel/SNaP/snap-ramp/.git
-   1140 lola
-   1070 st
-    966 diff
-    756 checkout
-    443 commit
-    425 --git-dir=.git
-    385 tag
-    381 add
-    351 difftool
-    339 help
-    325 br
-    303 log
+  39361 rev-parse
+  19270 symbolic-ref
+   2185 --git-dir=/home/michiel/SNaP/snap-ramp/.git
+   1242 lola
+   1122 st
+   1034 diff
+    810 checkout
+    484 commit
+    463 --git-dir=.git
+    441 tag
+    384 add
+    372 difftool
+    366 help
+    353 br
+    304 log
     282 diff-index
-    237 stash
-    220 push
-    219 show
-    169 describe
-    152 merge
-     98 branch
-     95 rebase
+    251 describe
+    243 show
+    241 stash
+    237 push
+    162 merge
+    100 branch
+     98 rebase
      90 lol
      71 config
      62 achievements
      43 ign
-     27 remote
-     27 gc
+     30 gc
+     29 remote
      23 ls-remote
      23 clone
+     21 fetch
      20 pull
      19 bundle
-     18 fetch
-     17 annotate
+     18 annotate
      15 --git-dir=
      13 blame
      12 reset
@@ -189,6 +190,7 @@ Git commands sorted by usage:
       2 am
       2 --git-dir=/home/michiel/SNaP/temp-checkout/snap-ramp/.git
       2 --git-dir=.
+      1 vr
       1 prune
       1 ls-files
       1 cherry-pick
