--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <h1>Michiel Verboven's Git Achievements</h1>
-Unlocked 36/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 506 points<br>
+Unlocked 36/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 515 points<br>
 <ul>
 <li><div class="title">Apprentice Archivist (Level 1)</div>  <div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
 <li><div class="title">Apprentice Archivist (Level 3)</div>  <div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
@@ -107,6 +107,7 @@ Unlocked 36/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 <li><div class="title">Master Historian (Level 7)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Master Historian (Level 8)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Master Presenter (Level 7)</div>  <div class="info">Shows one or more objects (blobs, trees, tags and commits) with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-show.html">git-show</a></div></li>
+<li><div class="title">Master Presenter (Level 8)</div>  <div class="info">Shows one or more objects (blobs, trees, tags and commits) with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-show.html">git-show</a></div></li>
 <li><div class="title">Master Product Manager (Level 8)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
 <li><div class="title">Master Socialite (Level 7)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Master Stone Mason (Level 7)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
@@ -133,29 +134,29 @@ Unlocked 36/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-  39361 rev-parse
-  19270 symbolic-ref
-   2185 --git-dir=/home/michiel/SNaP/snap-ramp/.git
-   1242 lola
-   1122 st
-   1034 diff
-    810 checkout
-    484 commit
-    463 --git-dir=.git
-    441 tag
-    384 add
-    372 difftool
-    366 help
-    353 br
+  40545 rev-parse
+  19841 symbolic-ref
+   2237 --git-dir=/home/michiel/SNaP/snap-ramp/.git
+   1302 lola
+   1162 st
+   1056 diff
+    830 checkout
+    499 commit
+    471 --git-dir=.git
+    453 tag
+    392 add
+    389 difftool
+    372 help
+    358 br
     304 log
     282 diff-index
+    253 stash
     251 describe
-    243 show
-    241 stash
-    237 push
-    162 merge
-    100 branch
-     98 rebase
+    248 show
+    242 push
+    164 merge
+    108 rebase
+    101 branch
      90 lol
      71 config
      62 achievements
@@ -168,11 +169,11 @@ Git commands sorted by usage:
      20 pull
      19 bundle
      18 annotate
+     15 reset
      15 --git-dir=
      13 blame
-     12 reset
+     11 reflog
      11 format-patch
-      9 reflog
       9 instaweb
       8 status
       7 fsck
