--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <h1>Michiel Verboven's Git Achievements</h1>
-Unlocked 36/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 524 points<br>
+Unlocked 36/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 529 points<br>
 <ul>
 <li><div class="title">Apprentice Archivist (Level 1)</div>  <div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
 <li><div class="title">Apprentice Archivist (Level 3)</div>  <div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
@@ -97,6 +97,7 @@ Unlocked 36/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 <li><div class="title">Historian (Level 5)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Historian (Level 6)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Homeowner</div>  <div class="info">Set global email address using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-config.html">git-config</a>.</div></li>
+<li><div class="title">Investigator (Level 4)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-blame.html">git-blame</a> to annotate a file with information about how each line changed.</div></li>
 <li><div class="title">Let there be light</div>  <div class="info">Commit without a parent.</div></li>
 <li><div class="title">Librarian</div>  <div class="info">Looked for change that introduce or remove a string with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a> -S</div></li>
 <li><div class="title">Master Author (Level 9)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -135,35 +136,36 @@ Unlocked 36/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-  43394 rev-parse
-  21257 symbolic-ref
-   2329 --git-dir=/home/michiel/SNaP/snap-ramp/.git
-   1401 lola
-   1225 st
-   1116 diff
-    856 checkout
-    533 commit
-    503 tag
+  43682 rev-parse
+  21401 symbolic-ref
+   2355 --git-dir=/home/michiel/SNaP/snap-ramp/.git
+   1417 lola
+   1227 st
+   1119 diff
+    862 checkout
+    536 commit
+    512 tag
     471 --git-dir=.git
-    409 difftool
+    411 difftool
     407 add
-    388 help
-    376 br
+    396 help
+    377 br
     304 log
     282 diff-index
+    268 show
     267 describe
-    264 show
     261 stash
-    255 push
-    170 merge
+    260 push
+    172 merge
     108 rebase
     101 branch
      95 lol
-     72 config
+     74 config
      62 achievements
      44 ign
      35 gc
      29 remote
+     24 tagdate
      23 ls-remote
      23 clone
      21 fetch
@@ -172,15 +174,15 @@ Git commands sorted by usage:
      19 bundle
      15 reset
      15 --git-dir=
-     13 blame
+     14 blame
      11 reflog
      11 format-patch
       9 instaweb
       8 status
       7 fsck
+      7 for-each-ref
       6 rm
       6 init
-      3 for-each-ref
       3 --version
       2 whatchanged
       2 show-branch
@@ -192,6 +194,7 @@ Git commands sorted by usage:
       2 am
       2 --git-dir=/home/michiel/SNaP/temp-checkout/snap-ramp/.git
       2 --git-dir=.
+      1 web
       1 vr
       1 prune
       1 ls-files
